# Robot

./: .gitignore  README.md
Hardware/PCB/制板文件/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
Software/Lower_Control/Lower_level_control/: .mxproject  PWMtest.ioc
Software/Lower_Control/Lower_level_control/Core/Inc/: MPU6050.h  chassis.h  encoder.h  kinematics.h  motor.h  odometry.h  pid.h  protocol.h  robot_ctrl.h  stm32f1xx_it.h
Software/Lower_Control/Lower_level_control/Core/Src/: MPU6050.c  chassis.c  encoder.c  kinematics.c  main.c  motor.c  odometry.c  pid.c  protocol.c  robot_ctrl.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Software/Lower_Control/Lower_level_control/EWARM/: PWMtest.ewd  PWMtest.ewp  Project.eww
Software/Lower_Control/Lower_level_control/MDK-ARM/: PWMtest.uvguix.zdwd1  PWMtest.uvoptx  PWMtest.uvprojx
Software/Lower_Control/Lower_level_control/MDK-ARM/PWMtest/: PWMtest.hex
Software/Upper_Computer/: view_camera.py
Software/Upper_Computer/PC_based_vision_control/: CMakeLists.txt  main.cpp  yolo.h
Software/Upper_Computer/PC_based_vision_control/model/: yolov8.param
